--- a/install_apache.yml
+++ b/install_apache.yml
@@ -2,17 +2,21 @@
 - hosts: all
   become: true
   tasks:
-    - name: update repo index
+    - name: install apache2 and php packages on Ubuntu
       apt:
+        name: 
+          - apache2
+          - libapache2-mod-php
+        state: latest
         update_cache: yes
       when: ansible_distribution == "Ubuntu"
-    - name: install apache2 package
-      apt:
-        name: apache2
+    
+    - name: install apache and php packages on CentOS
+      dnf:
+        name:
+          - httpd
+          - php
         state: latest
-      when: ansible_distribution == "Ubuntu"
-    - name: add php support for apache
-      apt:
-        name: libapache2-mod-php
-        state: latest
-      when: ansible_distribution == "Ubuntu"
+        update_cache: yes
+      when: ansible_distribution == "CentOS"
+
