--- a/install_apache.yml
+++ b/install_apache.yml
@@ -2,21 +2,10 @@
 - hosts: all
   become: true
   tasks:
-    - name: install apache2 and php packages on Ubuntu
-      apt:
+    - name: install apache and php packages on Ubuntu
+      package:
         name: 
-          - apache2
-          - libapache2-mod-php
+          - "{{ apache_package }}"
+          - "{{ php_package }}"
         state: latest
         update_cache: yes
-      when: ansible_distribution == "Ubuntu"
-    
-    - name: install apache and php packages on CentOS
-      dnf:
-        name:
-          - httpd
-          - php
-        state: latest
-        update_cache: yes
-      when: ansible_distribution == "CentOS"
-
