--- a/install_playbook.yml
+++ b/install_playbook.yml
@@ -17,6 +17,22 @@
       update_cache: yes
     when: ansible_distribution == "Ubuntu"
 
+- hosts: workstations
+  become: true
+  tasks:
+
+  - name : install unzip
+    package:
+      name: unzip
+  - name: install terraform
+    unarchive:
+      src: https://releases.hashicorp.com/terraform/0.12.28/terraform_0.12.28_linux_amd64.zip
+      dest: /usr/local/bin
+      remote_src: yes
+      mode: 0755
+      owner: root
+      group: root
+
 - hosts: web_servers
   become: true
   tasks:
@@ -42,7 +58,7 @@
   - name: copy default html file for site
     tags: apache,apache2,httpd
     copy: 
-      src: my_files/default_site.html
+      src: default_site.html
       dest: /var/www/html/index.html
       owner: root
       group: root
