added bootstrap playbook to prepare new hosts to work with ansible

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,4 @@
 [defaults]
 inventory = /home/adrian/ansible_learning/inventory
 private_key_file = /home/adrian/.ssh/ansible_key
+remote_user = simone
